<resources>
    <string name="app_name">凯顿家长端</string>
    <string name="nav_title_main">主页</string>
    <string name="nav_title_video">视频</string>
    <string name="nav_title_picture">照片</string>
    <string name="nav_title_parent_notebook">家联本</string>
    <string name="nav_title_message">消息</string>
    <string name="please_input_number">请输入手机号</string>
    <string name="please_input_parents_name">请输入家长姓名</string>
    <string name="please_input_child_name">请输入学生姓名</string>
    <string name="school_notice">校内通知</string>
    <string name="course_assignments">课程作业情况</string>
    <string name="teacher_evaluation">老师评语</string>
    <string name="course_listen">听</string>
    <string name="course_speak">说</string>
    <string name="course_read">读</string>
    <string name="course_write">写</string>
    <string name="msg_title">消息</string>
    <string name="msg_detail">消息详情</string>
    <string name="msg_delete">删除</string>
    <string name="write_msg">写消息</string>

    <string-array name="msg_title">
        <item>已读</item>
        <item>未读</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_input_account">请输入学员学号</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="tip_title1">Five To One</string>
    <string name="tip_title2">Happy Learning</string>
    <string name="tip_title3">Save Money</string>
    <string name="tip_content1">教学工作是一种由教师和学生两方面共同合作，完成对规定教材的体会理解以有益于学生行为和经验的活动。这就不能不涉及理论、学校班级组织理论和训练理论的问题。</string>
    <string name="tip_content2">教师通过这些课程与相应的课外作业促进学生的认知性学习(智力发展)、情感性学习(价值观的发展)与心理运动性学习(操作技能的发展)，从而把他们培养成能够服务于社会的全面发展的人。</string>
    <string name="tip_content3">在公司里，我们提倡自由、开放的工作氛围，省钱网？？？</string>
    <string name="no_msg">暂无消息</string>
    <string name="photo_title">@string/nav_title_picture</string>
    <string name="video_text">@string/nav_title_video</string>
</resources>
