<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_title_main"/>

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/nav_title_video"/>

    <item
        android:id="@+id/navigation_picture"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_title_picture"/>

    <item
        android:id="@+id/navigation_parent_notebook"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_title_picture"/>

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_title_picture"/>

</menu>
