<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="300dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_home"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/et_input_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_input"
            android:hint="@string/please_input_number"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:textColor="@color/text_main"
            android:textColorHint="@color/text_second"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_input_parents_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_input"
            android:hint="@string/please_input_parents_name"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:textColor="@color/text_main"
            android:textColorHint="@color/text_second"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_input_child_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_input"
            android:hint="@string/please_input_child_name"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:textColor="@color/text_main"
            android:textColorHint="@color/text_second"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/iv_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/confirm_btn_home" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_close_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/close_btn_home" />

    </LinearLayout>

</LinearLayout>