<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="17dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="17dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll_course_assignments_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_course_assignments_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/kczy_icon_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/course_assignments"
                android:textColor="@color/text_main"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_course_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_course_assignments_icon"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/iv_course_photo"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:contentDescription="@string/app_name"
                fresco:placeholderImage="@drawable/fun_book_placeholder" />

            <TextView
                android:id="@+id/iv_course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#433d2e"
                android:textSize="15sp"
                tools:text="ABC 1-9" />

            <LinearLayout
                android:id="@+id/ll_spinner"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/bg_course_select">

                <Spinner
                    android:id="@+id/sp_course_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/course_index" />

            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/item_course_schedule"/>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_course_assignments_icon"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="36dp"
            android:layout_toEndOf="@id/ll_course_select"
            android:layout_toRightOf="@id/ll_course_select"
            android:indeterminateDrawable="@drawable/progressbar" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_color" />

    <RelativeLayout
        android:id="@+id/rl_teacher_evaluation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="17dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="17dp"
        android:visibility="visible"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll_teacher_evaluation_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_teacher_evaluation_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/lspy_icon_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/teacher_evaluation"
                android:textColor="@color/text_main"
                android:textSize="17sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_teacher_evaluation_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_teacher_evaluation_icon"
            android:layout_marginTop="15dp"
            android:textColor="#433d2e"
            android:textSize="15sp"
            tools:text="        下次一ABC课程，我们进行考试，及成果展示，请各位家长带好xxx相关的东西，并准时参加成果展示课程。" />

        <TextView
            android:id="@+id/tv_teacher_evaluation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_teacher_evaluation_content"
            android:layout_marginTop="18dp"
            tools:text="2017年9月6日 by Zola" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="#f4f3ee" />

</LinearLayout>